# ev3dprinter

./: .gitignore  Cargo.toml  Makefile  README.md  ScratchPad.md
.cargo/: config.toml
src/: extruder.rs  gcode.rs  lib.rs  main.rs  motor.rs  motors.rs  printhead.rs
src/depricated/: main.rs  motors.rs  printhead.rs
src/gcode/: parser.rs
tests/: example.gcode  integration_test.rs
