[package]
name = "ev3dprinter"
version = "0.1.0"
edition = "2021"

[lib]
name = "ev3dlib"
path = "src/lib.rs"

[[bin]]
name = "ev3dprinter"
path = "src/bin/print.rs"

[dependencies]
cgmath = "0.18.0"
derive_builder = "0.12.0"
easy-error = "1.0.0"
ev3dev-lang-rust = "*"

[profile.release]
lto = true
strip = true
opt-level = 3
